crates/test-ui/ui/protocol.stderr
error[E0277]: the trait bound `dyn Bar: Foo` is not satisfied
 --> ui/protocol.rs
  |
  |     impl_foo::<ProtocolObject<dyn Bar>>();
  |                ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `dyn Bar`
  |
  = help: the following other types implement trait `Foo`:
            DummyClass
            ProtocolObject<T>
note: required for `ProtocolObject<dyn Bar>` to implement `Foo`
 --> ui/protocol.rs
  |
  | / extern_protocol!(
  | |     unsafe trait Foo {}
  | |
  | |     unsafe impl ProtocolType for dyn Foo {}
  | | );
  | |_^ unsatisfied trait bound introduced here
note: required by a bound in `impl_foo`
 --> ui/protocol.rs
  |
  |     fn impl_foo<T: Foo>() {}
  |                    ^^^ required by this bound in `impl_foo`
  = note: this error originates in the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dyn Foo: Bar` is not satisfied
 --> ui/protocol.rs
  |
  |     impl_bar::<ProtocolObject<dyn Foo>>();
  |                ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` is not implemented for `dyn Foo`
  |
  = help: the following other types implement trait `Bar`:
            DummyClass
            ProtocolObject<T>
note: required for `ProtocolObject<dyn Foo>` to implement `Bar`
 --> ui/protocol.rs
  |
  | / extern_protocol!(
  | |     unsafe trait Bar {}
  | |
  | |     unsafe impl ProtocolType for dyn Bar {}
  | | );
  | |_^ unsatisfied trait bound introduced here
note: required by a bound in `impl_bar`
 --> ui/protocol.rs
  |
  |     fn impl_bar<T: Bar>() {}
  |                    ^^^ required by this bound in `impl_bar`
  = note: this error originates in the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dyn Foo: FooBar` is not satisfied
 --> ui/protocol.rs
  |
  |     impl_foobar::<ProtocolObject<dyn Foo>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^ the trait `FooBar` is not implemented for `dyn Foo`
  |
  = help: the following other types implement trait `FooBar`:
            DummyClass
            ProtocolObject<T>
note: required for `ProtocolObject<dyn Foo>` to implement `FooBar`
 --> ui/protocol.rs
  |
  | / extern_protocol!(
  | |     unsafe trait FooBar: Foo + Bar {}
  | |
  | |     unsafe impl ProtocolType for dyn FooBar {}
  | | );
  | |_^ unsatisfied trait bound introduced here
note: required by a bound in `impl_foobar`
 --> ui/protocol.rs
  |
  |     fn impl_foobar<T: FooBar>() {}
  |                       ^^^^^^ required by this bound in `impl_foobar`
  = note: this error originates in the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dyn Bar: FooBar` is not satisfied
 --> ui/protocol.rs
  |
  |     impl_foobar::<ProtocolObject<dyn Bar>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^ the trait `FooBar` is not implemented for `dyn Bar`
  |
  = help: the following other types implement trait `FooBar`:
            DummyClass
            ProtocolObject<T>
note: required for `ProtocolObject<dyn Bar>` to implement `FooBar`
 --> ui/protocol.rs
  |
  | / extern_protocol!(
  | |     unsafe trait FooBar: Foo + Bar {}
  | |
  | |     unsafe impl ProtocolType for dyn FooBar {}
  | | );
  | |_^ unsatisfied trait bound introduced here
note: required by a bound in `impl_foobar`
 --> ui/protocol.rs
  |
  |     fn impl_foobar<T: FooBar>() {}
  |                       ^^^^^^ required by this bound in `impl_foobar`
  = note: this error originates in the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dyn Foo: FooFooBar` is not satisfied
 --> ui/protocol.rs
  |
  |     impl_foofoobar::<ProtocolObject<dyn Foo>>();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^ the trait `FooFooBar` is not implemented for `dyn Foo`
  |
  = help: the trait `FooFooBar` is implemented for `ProtocolObject<T>`
note: required for `ProtocolObject<dyn Foo>` to implement `FooFooBar`
 --> ui/protocol.rs
  |
  | / extern_protocol!(
  | |     unsafe trait FooFooBar: Foo + FooBar {}
  | |
  | |     unsafe impl ProtocolType for dyn FooFooBar {}
  | | );
  | |_^ unsatisfied trait bound introduced here
note: required by a bound in `impl_foofoobar`
 --> ui/protocol.rs
  |
  |     fn impl_foofoobar<T: FooFooBar>() {}
  |                          ^^^^^^^^^ required by this bound in `impl_foofoobar`
  = note: this error originates in the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dyn Bar: FooFooBar` is not satisfied
 --> ui/protocol.rs
  |
  |     impl_foofoobar::<ProtocolObject<dyn Bar>>();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^ the trait `FooFooBar` is not implemented for `dyn Bar`
  |
  = help: the trait `FooFooBar` is implemented for `ProtocolObject<T>`
note: required for `ProtocolObject<dyn Bar>` to implement `FooFooBar`
 --> ui/protocol.rs
  |
  | / extern_protocol!(
  | |     unsafe trait FooFooBar: Foo + FooBar {}
  | |
  | |     unsafe impl ProtocolType for dyn FooFooBar {}
  | | );
  | |_^ unsatisfied trait bound introduced here
note: required by a bound in `impl_foofoobar`
 --> ui/protocol.rs
  |
  |     fn impl_foofoobar<T: FooFooBar>() {}
  |                          ^^^^^^^^^ required by this bound in `impl_foofoobar`
  = note: this error originates in the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dyn FooBar: FooFooBar` is not satisfied
 --> ui/protocol.rs
  |
  |     impl_foofoobar::<ProtocolObject<dyn FooBar>>();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FooFooBar` is not implemented for `dyn FooBar`
  |
  = help: the trait `FooFooBar` is implemented for `ProtocolObject<T>`
note: required for `ProtocolObject<dyn FooBar>` to implement `FooFooBar`
 --> ui/protocol.rs
  |
  | / extern_protocol!(
  | |     unsafe trait FooFooBar: Foo + FooBar {}
  | |
  | |     unsafe impl ProtocolType for dyn FooFooBar {}
  | | );
  | |_^ unsatisfied trait bound introduced here
note: required by a bound in `impl_foofoobar`
 --> ui/protocol.rs
  |
  |     fn impl_foofoobar<T: FooFooBar>() {}
  |                          ^^^^^^^^^ required by this bound in `impl_foofoobar`
  = note: this error originates in the macro `extern_protocol` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DummyClass: FooFooBar` is not satisfied
 --> ui/protocol.rs
  |
  |     impl_foofoobar::<DummyClass>();
  |                      ^^^^^^^^^^ the trait `FooFooBar` is not implemented for `DummyClass`
  |
  = help: the trait `FooFooBar` is implemented for `ProtocolObject<T>`
note: required by a bound in `impl_foofoobar`
 --> ui/protocol.rs
  |
  |     fn impl_foofoobar<T: FooFooBar>() {}
  |                          ^^^^^^^^^ required by this bound in `impl_foofoobar`
